--- a/styles.css
+++ b/styles.css
@@ -33,5 +33,55 @@ width: 60%;
 }
 
 .servicios{
+    background: rgba(18, 31, 54, 0.596);
+    
+    height: 200px;
+}
+
+.services-details{
+    padding: 20px;
     background: #7fb3d5;
+    border-radius: 20px;
+    margin-top: -100px;
+    height: 300px;
+    width: 250px;
+}
+
+.image-service-details{
+    background: #eaeef1;  
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+}
+
+.section-services{
+    margin-top: 150px;
+}
+
+.description-services{
+    min-height: 300px;
+    background: #d5d8dc
+   
+}
+
+.services{
+    position: relative;
+}
+
+.image-services{
+    top: -110px;
+    right: 100px;
+    position: absolute;
+    height: 400px;
+    width: 400px;
+    background: #284469
+}
+
+.image-services-2{
+    top: -110px;
+    left: 100px;
+    position: absolute;
+    height: 400px;
+    width: 400px;
+    background: #284469
 }
