--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+:root{
+    --color-blue-1:rgb(9,29,54);
+    --color-blue-2:rgb(58,78,122);;
+    --color-blue-3:rgb(94,131,186);;
+    --color-blue-4:rgb(194,210,233);;
+    --color-blue-5:rgb(241,241,240);;
+}
+
+body {
+    font-family: 'Inter', sans-serif;
+}
+
+.title-main{
+    font-weight: 700;
+    color: var(--color-blue-5);
+}
+
+.title-secundary{
+    font-weight: 400;
+    color: var(--color-blue-4);  
+}
+
+.title-description{
+    font-size: 20px;
+    color: var(--color-blue-5);   
+}
+
+.image-title{
+    background-image:linear-gradient(to bottom, rgba(27, 27, 27, 0.52), rgba(0, 0, 0, 0.73)),url('images/fondo.jpg');
+   height: 600px;
+   width: 100%;
+   background-size: cover;
+    background-position: center;
+}
+
 .imagen-superpuesta{
 right: 20%;
 top: 35%;
@@ -60,8 +97,8 @@ width: 60%;
 
 .description-services{
     min-height: 300px;
-    background: #d5d8dc
-   
+    background: #d5d8dc;
+  
 }
 
 .services{
@@ -74,7 +111,8 @@ width: 60%;
     position: absolute;
     height: 400px;
     width: 400px;
-    background: #284469
+    background: #284469;
+
 }
 
 .image-services-2{
@@ -85,3 +123,73 @@ width: 60%;
     width: 400px;
     background: #284469
 }
+
+.about-us{
+    margin-top: 100px;
+}
+
+.square-mision-vision{
+    position: relative;
+    height: 500px;
+    width: 600px;
+    background: #e7e9eb
+}
+
+.square-image{
+position: absolute;
+top: -50px;
+left: -50px;
+height: 400px;
+width: 400px;
+background: #284469
+}
+
+.square-description{
+    bottom: -50px;
+    right: -50px;
+    position: absolute;
+    height: 400px;
+    width: 400px;
+    background: #637996
+}
+
+.contact-us {
+    margin-top: 100px;
+    
+}
+
+.image-contact-fondo {
+    background-image:linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(0, 0, 0, 0.73)),url('images/fondo_pezca.jpg');
+    height: 700px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    top:-100px;
+}
+
+.contact-us-title{
+    
+    height: 125px;
+    width: 100%;
+    background: #284469;
+}
+
+.description-contact-us{
+    font-weight: bold;
+    color: aliceblue;
+}
+
+.zone-form{
+    height: auto;
+    width: auto;
+    background: #e7e9eb;
+    padding: 25px;
+}
+
+footer{
+    height: 400px;
+    width: 100%;
+    background: #0b0d18;
+}
+
