--- a/responsividad.css
+++ b/responsividad.css
@@ -6,6 +6,8 @@
         font-size: 10px;
     }
 
+    
+
     .image-logo-title{
 height: 30px;
 width: 30px;
@@ -39,6 +41,7 @@ font-size: 12px;
     }
 
     .image-services{
+        
         left: 0;
         top: -400px;
         height: 300px;
@@ -66,6 +69,7 @@ font-size: 12px;
     .img-services{
         max-width: 200px ;
         max-height: 200px;
+        object-fit: contain;
     }
 
     .square-image{
