--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ body {
     background: var(--color-blue-5);
  
     max-width: 100%;
-    overflow-x: hidden;
 }
 
 #link-producto{
@@ -114,7 +113,7 @@ body {
 }
 
 .image-title{
-    background-image:linear-gradient(to bottom, rgba(27, 27, 27, 0.52), rgba(0, 0, 0, 0.73)),url('images/fondo.jpg');
+    background-image:linear-gradient(to bottom, rgba(27, 27, 27, 0.52), rgba(0, 0, 0, 0.73)),url('images/fondo.webp');
    height: 600px;
    width: 100%;
    background-size: cover;
@@ -216,10 +215,11 @@ width: 60%;
     position: fixed;
     width: 100%;
     background: var(--color-blue-1);
+    box-sizing: border-box;
 }
 
 .servicios{
-    background-image:linear-gradient(to bottom, rgba(6, 6, 10, 0.52), rgba(0, 0, 0, 0.73)),url('images/segundo_fondo.jpg');
+    background-image:linear-gradient(to bottom, rgba(6, 6, 10, 0.52), rgba(0, 0, 0, 0.73)),url('images/segundo_fondo.webp');
     background-size: cover;
     background-position: center;
     height: 250px;
@@ -305,6 +305,7 @@ width: 60%;
 
 .section-services{
     margin-top: 150px;
+    /*overflow-x: hidden;*/
 }
 
 .description-services{
@@ -500,7 +501,7 @@ width: 400px;
 }
 
 .image-contact-fondo {
-    background-image:linear-gradient(to bottom, rgba(13, 14, 20, 0.52), rgba(0, 0, 0, 0.73)),url('images/tercer_fondo.jpg');
+    background-image:linear-gradient(to bottom, rgba(13, 14, 20, 0.52), rgba(0, 0, 0, 0.73)),url('images/tercer_fondo.webp');
     height: 700px;
     width: 100%;
     background-size: cover;
